--- a/Views/Listing/Index.cshtml
+++ b/Views/Listing/Index.cshtml
@@ -27,21 +27,21 @@
                         <div class="row">
                             <div class="form-group col-md-3 wow fadeInRight">
 
-                                @Html.DropDownList("PropertyTypeId", null, htmlAttributes: new { @class = "form-control newsletter-input" })
+                                @Html.DropDownListFor(model => model.FirstOrDefault().PropertyTypeId, null, htmlAttributes: new { @class = "form-control newsletter-input" })
 
 
                             </div>
 
                             <div class="form-group col-md-2 wow fadeInRight">
 
-                                @Html.DropDownList("NegeriID", null, htmlAttributes: new { @class = "form-control newsletter-input" })
+                                @Html.DropDownListFor(model => model.FirstOrDefault().NegeriId, null, htmlAttributes: new { @class = "form-control newsletter-input" })
 
 
                             </div>
 
                             <div class="form-group col-md-2 wow fadeInRight">
 
-                                @Html.DropDownList("ListingTypeId", null, htmlAttributes: new { @class = "form-control newsletter-input" })
+                                @Html.DropDownListFor(model => model.FirstOrDefault().ListingTypeId, null, htmlAttributes: new { @class = "form-control newsletter-input" })
 
 
 
@@ -80,7 +80,7 @@
 
 
                 <div class="col-lg-9">
-                    <h2 id="forms-example">Auction Properties in Malaysia (@ViewBag.listSize Results Found)</h2>
+                    <h2 id="forms-example">Auction Properties in Malaysia for "@ViewBag.enterLocation" (@ViewBag.listSize Results Found)</h2>
 
                     @foreach (var item in Model)
                     {
