--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -186,7 +186,7 @@
                                                     Type of Auction
                                                 </td>
                                                 <td>
-                                                    <strong>RM @Model.listing.AuctionType.Nama</strong>
+                                                    <strong>@Model.listing.AuctionType.Nama</strong>
                                                 </td>
                                             </tr>
 
