--- a/Views/MembershipRequests/Index.cshtml
+++ b/Views/MembershipRequests/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<MVC5.Models.MembershipRequest>
-
+@using MVC5.Common
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
@@ -42,24 +42,6 @@
         <th>
             @Html.DisplayNameFor(model => model.address)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateUpdated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastUpdated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastUpdatedBy)
-        </th>
         <th></th>
     </tr>
 
@@ -96,27 +78,16 @@
             @Html.DisplayFor(modelItem => item.address)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateUpdated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastUpdated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastUpdatedBy)
-        </td>
-        <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id }) |
+            @if (User.IsInRole(MyConstant.Role_Admin))
+            {
+                @Html.ActionLink("Cancel", "updateMembership", new { id = item.Id, status = false, item.User.UserName })
+            @Html.ActionLink("Approve", "updateMembership", new { id = item.Id, status = true, item.User.UserName })
+            }
+            
+
         </td>
     </tr>
 }
