fix popular search

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -226,7 +226,7 @@
                         <h2>Hot Auction in Malaysia</h2>
                         <hr />
                         <div class="profile">
-                            @foreach (var item in Model.listing)
+                            @foreach (var item in Model.listingHot)
             {
                                 <div class="col-xs-12 col-sm-6 col-md-3">
                                     <div class="thumbnail wow fadeInUp" data-wow-delay=".1s">
