--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -170,7 +170,7 @@
                         </div>
                         <div class="row">
 
-                            <div class="col-lg-12 col-sm-12">
+                            <div class="col-lg-8 col-sm-8">
                                 <h1>
                                     Premium Info 
                                 </h1>
@@ -314,6 +314,28 @@
                                 
                                 
 
+                            </div>
+
+                            <div class="col-xs-4 col-sm-4 col-md-4">
+                                <div class="thumbnail wow fadeInUp bg-gray" data-wow-delay=".1s">
+                                    <img src="~/Content/img/team/member1.jpg" alt="">
+                                    <div class="caption">
+                                        <h4>
+                                            Our Agent
+                                        </h4>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit
+                                        </p>
+                                        
+                                           
+                                            <a href="@MyConstant.wasapApiContact" target="_blank" class="btn btn-success btn-block">
+                                                Contact Agent (WhatsApp)
+                                                <i class="fa fa-phone"> 
+                                                </i>
+                                            </a>
+                                        
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
