--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-6 col-md-offset-3">
             <h2>Log In</h2>
            
             <section id="loginForm">
