--- a/Views/MemberPackages/BuyPackage.cshtml
+++ b/Views/MemberPackages/BuyPackage.cshtml
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="price-two-container">
                
-                    <div class="col-md-6">
+                    <div class="col-md-4 col-md-offset-2">
                         <div class="pricing-table-two wow fadeInUp">
                             <div class="inner">
                                 <div class="title">
@@ -111,7 +111,7 @@
 
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="pricing-table-two highlighted wow fadeInUp">
                             <div class="inner">
                                 <div class="title">
