--- a/Views/Shared/Menu.cshtml
+++ b/Views/Shared/Menu.cshtml
@@ -1,4 +1,8 @@
-﻿<li>
+﻿
+<li>
+    @Html.ActionLink("Our Package", "BuyPackage", "MemberPackages")
+</li>
+<li>
     @Html.ActionLink("About  Us", "Article", "Home", new { articleKod = "ARTCL_TYPE_ABOUT" }, null)
 </li>
 <li>
