--- a/Views/MembershipRequests/Create.cshtml
+++ b/Views/MembershipRequests/Create.cshtml
@@ -18,7 +18,7 @@
         
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PackageTypeId, "PackageTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PackageTypeId, "Package Type", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("PackageTypeId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PackageTypeId, "", new { @class = "text-danger" })
