--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -207,7 +207,7 @@
         <!--tab start-->
         <section class="tab wow fadeInLeft">
             <header class="panel-heading tab-bg-dark-navy-blue">
-                <ul class="nav nav-tabs nav-justified ">
+                <ul class="nav nav-tabs">
                     <li class="active">
                         <a data-toggle="tab" href="#hotlisting">
                             Hot Listing
