--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -327,16 +327,47 @@
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit
                                         </p>
                                         
-                                           
-                                            <a href="@MyConstant.wasapApiContact" target="_blank" class="btn btn-success btn-block">
-                                                Contact Agent (WhatsApp)
-                                                <i class="fa fa-phone"> 
+                                        @Html.ActionLink("Contact Agent", "Create", "AppointAgents", null, htmlAttributes: new { @class = "btn btn-success btn-block" })
+                                      <br />
+                                         <p class="text-center">
+                                            <a href="@MyConstant.wasapApiContact" target="_blank">
+                                                
+                                                <i class="fa fa-phone">
                                                 </i>
+                                                @MyConstant.last_office_noTel
                                             </a>
+                                            <br />
+                                            <a href="@MyConstant.wasapApiContact" target="_blank">
+                                                
+                                                <i class="fa fa-phone">
+                                                </i>
+                                                @MyConstant.agent_noTel
+                                            </a>
+                                        </p>
+                                            
                                         
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
+                            <div class="text-center feature-head wow fadeInDown" style="padding-bottom:20px;">
+                                <div class="col-md-4">
+                                    <a href="#" class="btn btn-danger btn-block btn-lg" target="_blank">Check Market Value</a>
+                                   
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="#" class="btn btn-success btn-block btn-lg" target="_blank">Check Rental</a>
+                                    
+                                </div>
+                                <div class="col-md-4">
+                                    @Html.ActionLink("Request POS", "Create", "PosRequests", null, htmlAttributes: new { @class = "btn btn-primary btn-block btn-lg" })
+                                </div>
+
+                            </div>
+
+
+
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-sm-12">
