--- a/Views/Listing/Index.cshtml
+++ b/Views/Listing/Index.cshtml
@@ -116,6 +116,7 @@
                                         <p>
                                             @if (item.listing.AuctionDate != null)
                                             {
+                                                <strong>Auction Date : </strong>
                                                 @item.listing.AuctionDate.Value.ToShortDateString()
                                             }
                                             
