--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -45,10 +45,11 @@
                             }
                             @if (Model.HasPassword)
                             {
-                                <i class="fa fa-tags"></i>  @Html.ActionLink("Tukar Kata Laluan", "ChangePassword", "Manage")}
+                                <i class="fa fa-tags"></i>  @Html.ActionLink("Tukar Kata Laluan", "ChangePassword", "Manage")
+                            }
                             else
                             {
-                                <i class="fa fa-tags"></i>  @Html.ActionLink("Set Kata Laluan", "SetPassword", "Manage")}
+                                <i class="fa fa-tags"></i>  @Html.ActionLink("Set Kata Laluan", "SetPassword", "Manage")
                             }
                             <hr />
                             <div class="box">
