--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="form-group col-md-12 wow fadeInRight">
-
+                    
                     @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Enter Location Name" } })
 
 
@@ -102,21 +102,21 @@
 
 
                 <div class="form-group col-md-12 wow fadeInRight">
-
+                    
                     @Html.DropDownList("PropertyTypeId", null, htmlAttributes: new { @class = "form-control newsletter-input" })
 
 
                 </div>
 
                 <div class="form-group col-md-6 wow fadeInRight">
-
+                    
                     @Html.DropDownList("NegeriID", null, htmlAttributes: new { @class = "form-control newsletter-input" })
 
 
                 </div>
 
                 <div class="form-group col-md-6 wow fadeInRight">
-
+                    
                     @Html.DropDownList("ListingTypeId", null, htmlAttributes: new { @class = "form-control newsletter-input" })
 
 
@@ -127,14 +127,14 @@
 
 
                 <div class="form-group col-md-3 wow fadeInRight">
-
+                    
                     @Html.EditorFor(model => model.MinPrice, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Min Price (MYR)" } })
 
 
                 </div>
 
                 <div class="form-group col-md-3 wow fadeInRight">
-
+                   
                     @Html.EditorFor(model => model.MaxPrice, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Max Price (MYR)" } })
 
 
@@ -142,7 +142,7 @@
 
                 <div class="form-group col-md-3 wow fadeInRight">
 
-
+                    
                     @Html.EditorFor(model => model.MinSize, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Min Area (Sq.ft)" } })
 
 
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="form-group col-md-3 wow fadeInRight">
-
+                    
                     @Html.EditorFor(model => model.MaxSize, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Max Area (Sq.ft)" } })
 
 
@@ -163,7 +163,7 @@
             <div class="row">
 
                 <div class="form-group col-md-12 wow fadeInRight">
-
+                    @Html.LabelFor(model => model.AuctionDate, htmlAttributes: new { @class = "control-label" })
                     @Html.EditorFor(model => model.AuctionDate, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Auction Date)" } })
 
                 </div>
