--- a/Views/PosRequests/Create.cshtml
+++ b/Views/PosRequests/Create.cshtml
@@ -15,10 +15,16 @@
         <h4>Please fill required info.</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-       
-
-       
-
+       @Html.HiddenFor(model => model.Listing.Id)
+        <strong>Property Info :</strong>
+       @Html.DisplayFor(model => model.Listing.UnitNo)
+        <br />
+        @Html.DisplayFor(model => model.Listing.Address1)
+        @Html.DisplayFor(model => model.Listing.Poskod)
+        @Html.DisplayFor(model => model.Listing.Negeri.Nama)
+        <br />
+        @Html.DisplayFor(model => model.Listing.AuctionDate)
+        <hr />
         <div class="form-group">
             @Html.LabelFor(model => model.nama, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
