--- a/Views/PosRequests/Index.cshtml
+++ b/Views/PosRequests/Index.cshtml
@@ -4,121 +4,68 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h2>POS Request List</h2>
+            <table class="table">
+                <tr>
+                    
+                    
+                    <th>
+                        @Html.DisplayNameFor(model => model.Listing.Address1)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StatusActive)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.nama)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ic)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.contact)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.address)
+                    </th>
+                    <th></th>
+                </tr>
 
-<h2>Index</h2>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        
+                       
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Listing.Address1)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusActive)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.nama)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ic)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.contact)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.address)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Introducer.NomborAhli)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Listing.UnitNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User.NomborAhli)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TarikhSah)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TarikhTamat)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StatusActive)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.nama)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ic)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.contact)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateUpdated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastUpdated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastUpdatedBy)
-        </th>
-        <th></th>
-    </tr>
+            </table>
+        </div>
+    </div>
+</div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Introducer.NomborAhli)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Listing.UnitNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.NomborAhli)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TarikhSah)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TarikhTamat)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StatusActive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.nama)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.contact)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateUpdated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastUpdated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastUpdatedBy)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
