--- a/Views/AffiliateComissions/Index.cshtml
+++ b/Views/AffiliateComissions/Index.cshtml
@@ -5,11 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Affiliate</h2>
 <table class="table">
     <tr>
         <th>
