--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
 
 
 
-    <div class="bg-gray col-lg-6" style="padding-top:20px; position:absolute; top:220px; left:60px; z-index:999999;">
+    <div class="bg-gray col-lg-6" style="padding-top:10px; position:absolute; top:215px; left:60px; z-index:999999;">
 
 
         <div class="container">
@@ -327,7 +327,7 @@
             </div>
             <div class="col-md-4">
 
-                @Html.ActionLink("Contact Us", "Register", "Account", null, htmlAttributes: new { @class = "btn btn-primary btn-block btn-lg" })
+                @Html.ActionLink("Contact Us", "Contact", "Home", null, htmlAttributes: new { @class = "btn btn-primary btn-block btn-lg" })
             </div>
             
         </div>
