--- a/Views/PosRequests/Create.cshtml
+++ b/Views/PosRequests/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Pos Request";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutCenter.cshtml";
 }
 
 <h2>POS Request</h2>
@@ -18,11 +18,11 @@
        @Html.HiddenFor(model => model.Listing.Id)
         <strong>Property Info :</strong>
        @Html.DisplayFor(model => model.Listing.UnitNo)
-        <br />
         @Html.DisplayFor(model => model.Listing.Address1)
         @Html.DisplayFor(model => model.Listing.Poskod)
         @Html.DisplayFor(model => model.Listing.Negeri.Nama)
         <br />
+        <strong>Auction Date :</strong>
         @Html.DisplayFor(model => model.Listing.AuctionDate)
         <hr />
         <div class="form-group">
