--- a/Views/Shared/_LayoutCenter.cshtml
+++ b/Views/Shared/_LayoutCenter.cshtml
@@ -78,7 +78,7 @@
     @Html.Partial("header")
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-6 col-lg-offset-3">
                 @RenderBody()
                 </div>
             </div>
