--- a/Views/Transaction/MessageList.cshtml
+++ b/Views/Transaction/MessageList.cshtml
@@ -3,87 +3,67 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <div class="content-page">
+    <h1>Message List</h1>
     <div class="row">
         <div class="col-md-6">
-            <!-- BEGIN SAMPLE TABLE PORTLET-->
-            <div class="portlet box red">
-                <div class="portlet-title">
-                    <div class="caption">
-                        <i class="fa fa-cogs"></i>Message List
-                    </div>
-                    <div class="tools">
-                        <a href="javascript:;" class="collapse">
-                        </a>
-                        <a href="#portlet-config" data-toggle="modal" class="config">
-                        </a>
-                        <a href="javascript:;" class="reload">
-                        </a>
-                        <a href="javascript:;" class="remove">
-                        </a>
-                    </div>
-                </div>
-                <div class="portlet-body">
-                    <div class="table-scrollable">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-
-                                   
-                                    <th>
-                                        Subject
-                                    </th>
-                                    <th>
-                                        Perihal
-                                    </th>
-                                    <th>
-                                        Tindakan
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
 
 
-                                @foreach (var item in Model)
+                        <th>
+                            Subject
+                        </th>
+                        <th>
+                            Perihal
+                        </th>
+                        <th>
+                            Tindakan
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+
+
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Subject)
+                            </td>
+                            <td>
+                                
+                                @Html.Raw(item.Perihal)
+                            </td>
+                            <td>
+                                @if (!item.ReadStatus)
                                 {
-                                    <tr>
-                                       
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Subject)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Perihal)
-                                        </td>
-                                        <td>
-                                            @if (!item.ReadStatus)
-                                            {
-                                                @Html.ActionLink("Baca", "ReadMessage", new { id = item.Id, activate = true })
-                                            }
-                                            
-                                        </td>
-                                        
-                                    </tr>
+                                    @Html.ActionLink("Baca", "ReadMessage", new { id = item.Id, activate = true })
                                 }
 
+                            </td>
+
+                        </tr>
+                    }
 
 
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <!-- END SAMPLE TABLE PORTLET-->
+
+                </tbody>
+            </table>
+
+
 
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <a href="/Manage/Index" class="btn blue">
-                Back to My Account
-            </a>
+            @Html.ActionLink("Back to My Account", "Index", "Manage", null, htmlAttributes: new { @class = "btn btn-primary" })
         </div>
+        <hr />
     </div>
     </div>
