--- a/Views/Shared/MainMenu.cshtml
+++ b/Views/Shared/MainMenu.cshtml
@@ -57,7 +57,7 @@
 
     <ul class="dropdown-menu">
         <li>
-            @Html.ActionLink("Auction Fair", "BuyPackage", "MemberPackages")
+            @Html.ActionLink("Auction Fair", "News", "Home")
         </li>
     </ul>
 </li>
