--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!--breadcrumbs start-->
-<div class="breadcrumbs-menu">
+<div class="breadcrumbs-menu hide-mobile">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-sm-12">
@@ -21,7 +21,7 @@
 <!--breadcrumbs end-->
 
 <!-- Sequence Modern Slider -->
-<div id="da-slider" class="da-slider">
+<div id="da-slider" class="da-slider hide-mobile">
     
     <div class="da-slide">
         <div class="container">
@@ -79,7 +79,7 @@
 
 
 
-    <div class="bg-gray col-lg-6" style="padding-top:10px; position:absolute; top:215px; left:60px; z-index:999999;">
+    <div class="bg-gray col-lg-6 bg-custom">
 
 
         <div class="container">
@@ -192,7 +192,7 @@
     </div>
 }
 
-<div class="container" id="tourpackages-carousel">
+<div class="container hide-mobile" id="tourpackages-carousel">
 
     
 
@@ -341,7 +341,7 @@
 
 
 <!--property start-->
-<div class="property gray-bg">
+<div class="property gray-bg hide-mobile">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center wow fadeInLeft">
@@ -402,7 +402,7 @@
     <span class="hr-inner"></span>
 </div>
 
-<div class="container">
+<div class="container hide-mobile">
     <div class="row mar-b-50 our-clients">
         <div class="col-md-3">
             <h2>
