--- a/Content/css/style-responsive.css
+++ b/Content/css/style-responsive.css
@@ -100,6 +100,18 @@
         margin-bottom: 10px;
     }
 
+    .hide-mobile {
+        display: none;
+    }
+
+    .bg-custom {
+    padding-top:10px; 
+    position:relative; 
+    top:0px; 
+    left:0px; 
+    z-index:999999;
+}
+
 
 
 }
@@ -130,7 +142,7 @@
         margin-bottom: 2%;
     }
 
-    .breadcrumb.pull-right{
+    .breadcrumb.pull-right {
         float: left !important;
         margin-top: 10px;
         padding: 0;
@@ -139,6 +151,18 @@
     .carousel-control {
         font-size: 23px;
         line-height: 38px;
+    }
+
+    .hide-mobile {
+        display: none;
+    }
+
+    .bg-custom {
+        padding-top: 10px;
+        position: relative;
+        top: 0px;
+        left: 0px;
+        z-index: 999999;
     }
 }
 
