--- a/Views/Shared/MainMenu.cshtml
+++ b/Views/Shared/MainMenu.cshtml
@@ -33,6 +33,9 @@
         <li>
             @Html.ActionLink("FAQ", "FAQ", "Home")
         </li>
+        <li>
+            @Html.ActionLink("Contact Us", "Contact", "Home")
+        </li>
     </ul>
 </li>
 
