--- a/Views/MembershipRequests/Create.cshtml
+++ b/Views/MembershipRequests/Create.cshtml
@@ -15,7 +15,7 @@
         <h4>@ViewBag.Title</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Introducer)
+        @Html.HiddenFor(model => model.Introducer.Id)
         <strong>Introducer :</strong> @Html.DisplayFor(model => model.Introducer.NomborAhli)
         <hr />
         <div class="form-group">
