--- a/Views/Articles/Edit.cshtml
+++ b/Views/Articles/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutEmpty.cshtml";
 }
 
 <h2>Edit</h2>
@@ -33,12 +33,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="summernote">Content</label>
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+                <textarea id="summernote" name="summernote">
+                    @Model.Content
+                </textarea>
             </div>
         </div>
+        @Html.HiddenFor(model => model.Content)
+
+        
 
         <div class="form-group">
             @Html.LabelFor(model => model.Link, htmlAttributes: new { @class = "control-label col-md-2" })
