--- a/Views/Shared/_LayoutEmpty.cshtml
+++ b/Views/Shared/_LayoutEmpty.cshtml
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Summernote</title>
+    <!-- Bootstrap core CSS -->
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/css/theme.css" rel="stylesheet">
+    <link href="~/Content/css/bootstrap-reset.css" rel="stylesheet">
+    <!-- <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--external css-->
+    <link href="~/Content/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="~/Content/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/css/flexslider.css" />
+    <link href="~/Content/assets/bxslider/jquery.bxslider.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/css/animate.css">
+    <link rel="stylesheet" href="~/Content/assets/owlcarousel/owl.carousel.css">
+    <link rel="stylesheet" href="~/Content/assets/owlcarousel/owl.theme.css">
+
+    <link href="~/Content/css/superfish.css" rel="stylesheet" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'> -->
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" type="text/css" href="~/Content/css/component.css">
+    <link href="~/Content/css/style.css" rel="stylesheet">
+    <link href="~/Content/css/style-responsive.css" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.3/summernote.css" rel="stylesheet">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
@@ -10,7 +31,17 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.3/summernote.js"></script>
 </head>
 <body>
-    @RenderBody()
+
+    @Html.Partial("header")
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                @RenderBody()
+            </div>
+        </div>
+    </div>
+
+    @Html.Partial("footer")
    
     <script>
     $(document).ready(function() {
