--- a/Views/Shared/header.cshtml
+++ b/Views/Shared/header.cshtml
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@Html.Action("GetBaseUrl", "Home")"><strong style="color:black;">Jom </strong> <span>Rumah Lelong</span></a>
+            <a class="navbar-brand" href="@Html.Action("GetBaseUrl", "Home")"><img height="100" width="153" src="~/Content/img/jomrumalogo.png" /></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
