--- a/Views/Shared/_LayoutHome.cshtml
+++ b/Views/Shared/_LayoutHome.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="Developed By M Abdur Rokib Promy">
     <meta name="author" content="cosmic">
     <meta name="keywords" content="Bootstrap 3, Template, Theme, Responsive, Corporate, Business">
-    <link rel="shortcut icon" href="~/Content/img/lelongpos.ico">
+    <link rel="shortcut icon" href="~/Content/img/jomrumalogo.ico">
 
     <title>
         @ViewBag.Title - @MyConstant.Web_Name
