--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -91,6 +91,10 @@
                 </div>
 
             <div class="col-lg-3">
+                <h2><i class="fa fa-share"></i> Affiliate Link </h2>
+                <h4>Share this QR Code or link with your friends to get points!</h4>
+                <h4>Current Points <span class="badge bg-green">@ViewBag.curPoint</span></h4>
+                
                 <div class="blog-side-item">
                     <div class="category">
 
