--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 
 
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     <div class="container">
         
