update my auction

--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -76,7 +76,7 @@
                                         <span class="badge bg-teal">@Model.AppointAgent.Count()</span>
                                         <i class="fa fa-inbox"></i> Appoint Agent
                                     </a>
-                                    <a class="btn btn-app" href="#">
+                                    <a class="btn btn-app" href="/MyAuctions/Index">
                                         <span class="badge bg-red">0</span>
                                         <i class="fa fa-heart-o"></i> My Auction
                                     </a>
