--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -77,7 +77,7 @@
                                         <i class="fa fa-inbox"></i> Appoint Agent
                                     </a>
                                     <a class="btn btn-app" href="/MyAuctions/Index">
-                                        <span class="badge bg-red">0</span>
+                                        <span class="badge bg-red">@ViewBag.MyAuction</span>
                                         <i class="fa fa-heart-o"></i> My Auction
                                     </a>
                                 </div><!-- /.box-body -->
