--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -353,11 +353,11 @@
                         <div class="row">
                             <div class="text-center feature-head wow fadeInDown" style="padding-bottom:20px;">
                                 <div class="col-md-4">
-                                    <a href="#" class="btn btn-danger btn-block btn-lg" target="_blank">Check Market Value</a>
+                                    <a href="http://www.brickz.my/" class="btn btn-danger btn-block btn-lg" target="_blank">Check Market Value</a>
                                    
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="#" class="btn btn-success btn-block btn-lg" target="_blank">Check Rental</a>
+                                    <a href="http://www.mudah.my/" class="btn btn-success btn-block btn-lg" target="_blank">Check Rental</a>
                                     
                                 </div>
                                 <div class="col-md-4">
