--- a/Views/AppointAgents/Create.cshtml
+++ b/Views/AppointAgents/Create.cshtml
@@ -15,7 +15,18 @@
         <h4>@ViewBag.Title</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Listing.Id)
         
+        @Html.DropDownList("ListingId", null, htmlAttributes: new { @class = "form-control newsletter-input", @style = "display:none;" })
+        <strong>Property Info :</strong>
+        @Html.DisplayFor(model => model.Listing.UnitNo)
+        @Html.DisplayFor(model => model.Listing.Address1)
+        @Html.DisplayFor(model => model.Listing.Poskod)
+        @Html.DisplayFor(model => model.Listing.Negeri.Nama)
+        <br />
+        <strong>Auction Date :</strong>
+        @Html.DisplayFor(model => model.Listing.AuctionDate)
+        <hr />
 
         <div class="form-group">
             @Html.LabelFor(model => model.nama, htmlAttributes: new { @class = "control-label col-md-2" })
