--- a/Views/PosRequests/Create.cshtml
+++ b/Views/PosRequests/Create.cshtml
@@ -16,6 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
        @Html.HiddenFor(model => model.Listing.Id)
+        @Html.DropDownList("ListingId", null, htmlAttributes: new { @class = "form-control newsletter-input", @style = "display:none;" })
         <strong>Property Info :</strong>
        @Html.DisplayFor(model => model.Listing.UnitNo)
         @Html.DisplayFor(model => model.Listing.Address1)
