--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -85,7 +85,7 @@
                 <div class="col-lg-9 ">
                     <h2 id="forms-example">
                         @if (Request.IsAuthenticated)
-                        {@Model.listing.UnitNo}  @Model.listing.Address1 @Model.listing.Poskod @Model.listing.Bandar.Nama @Model.listing.Negeri.Nama
+                        {@Model.listing.UnitNo}  @Model.listing.Address1 @Model.listing.Poskod @Model.listing.Negeri.Nama
                     </h2>
                     @if (!Request.IsAuthenticated)
                     {
