--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -241,7 +241,7 @@
                                         }
                                         <div class="caption">
                                             <strong>
-                                                @item.listing.Address1 @item.listing.Poskod @item.listing.Bandar.Nama @item.listing.Negeri.Nama
+                                                @item.listing.Address1 @item.listing.Poskod @item.listing.Negeri.Nama
                                             </strong>
                                             <strong>
                                                 RM @item.listing.Price
@@ -284,7 +284,7 @@
                                         }
                                         <div class="caption">
                                             <strong>
-                                                @item.listing.Address1 @item.listing.Poskod @item.listing.Bandar.Nama @item.listing.Negeri.Nama
+                                                @item.listing.Address1 @item.listing.Poskod @item.listing.Negeri.Nama
                                             </strong>
                                             <strong>
                                                 RM @item.listing.Price
