--- a/Views/Listing/Index.cshtml
+++ b/Views/Listing/Index.cshtml
@@ -107,7 +107,7 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h4 class="media-heading">
-                                           @if (Request.IsAuthenticated) {@item.listing.UnitNo}  @item.listing.Address1 @item.listing.Poskod @item.listing.Bandar.Nama @item.listing.Negeri.Nama
+                                           @if (Request.IsAuthenticated) {@item.listing.UnitNo}  @item.listing.Address1 @item.listing.Poskod @item.listing.Negeri.Nama
                                         </h4>
                                         <h2>RM @item.listing.Price</h2>
                                         <p>
