add  post with comment

--- a/Views/Shared/MenuAdmin.cshtml
+++ b/Views/Shared/MenuAdmin.cshtml
@@ -25,6 +25,9 @@
         @Html.ActionLink("AffiliateComissions", "Index", "AffiliateComissions")
     </li>
     <li>
+        @Html.ActionLink("Comment", "Index", "Comments")
+    </li>
+    <li>
         @Html.ActionLink("SAK", "Index", "SAK")
     </li>
     <li>
