--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!--breadcrumbs start-->
-<div class="breadcrumbs-menu">
+<div class="breadcrumbs-menu hide-mobile">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-sm-12">
