--- a/Views/Shared/MenuAdmin.cshtml
+++ b/Views/Shared/MenuAdmin.cshtml
@@ -25,6 +25,10 @@
         @Html.ActionLink("AffiliateComissions", "Index", "AffiliateComissions")
     </li>
     <li>
+        @Html.ActionLink("NewsLetterSubscriptions", "Index", "NewsLetterSubscriptions")
+    </li>
+    
+    <li>
         @Html.ActionLink("Comment", "Index", "Comments")
     </li>
     <li>
