add subcription and send mewletter

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -329,7 +329,7 @@
 
             <div class="col-md-3">
 
-                @Html.ActionLink("Get Mobile", "Register", "Account", null, htmlAttributes: new { @class = "btn btn-success btn-block btn-lg" })
+                @Html.ActionLink("Get Mobile", "ComingSoon", "Home", null, htmlAttributes: new { @class = "btn btn-success btn-block btn-lg" })
             </div>
             <div class="col-md-3">
 
