--- a/Views/NewsLetterSubscriptions/Index.cshtml
+++ b/Views/NewsLetterSubscriptions/Index.cshtml
@@ -8,7 +8,9 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("SendNewsletter to Subscription", "SendNewsletterToSubcription")
+    <br />
+    @Html.ActionLink("SendNewsletter to Web User", "SendNewsletterToUser")
 </p>
 <table class="table">
     <tr>
